2263
This is another manifestation of the problem:

existential.scala:
```scala
trait Request[IN[_]]
trait T[A]
val request: Request[IN] forSome { type IN[_] } = new Request[T] {}
```
```scala
~$$ scala-2.7.5 ~/Desktop/existential.scala 
~$$ scala-2.8.0 ~/Desktop/existential.scala 
(fragment of existential.scala):3: error: type mismatch;
 found   : java.lang.Object with this.Request[this.T]{ ... }
 required: this.Request[_[_]]
var request: Request[IN] forSome { type IN[_] } = new Request[T] {}
                                                   ^
one error found
!!!
discarding <script preamble>
~$$ scala-2.8.0 -version
Scala code runner version 2.8.0.r18583-b20090827020153 -- Copyright 2002-2009, LAMP/EPFL
```
